--- a/index.html
+++ b/index.html
@@ -9,31 +9,31 @@
     <title>Document</title>
 </head>
 <body>
-    <section class="header" id="header">
-        <div class="nav-bar">
-            <div class="logo">
-                <a href="#">Ping Fan</a>
-            </div>
-            <div class="menu">
-                <ul>
-                    <li><a href="#">About.</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </div>
-            <div class="social-media">
-                <ul>
-                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                </ul>
-            </div>
+    <div class="nav-bar">
+        <div class="logo">
+            <a href="#">Ping Fan</a>
         </div>
+        <div class="menu">
+            <ul>
+                <li><a href="#">About.</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+        <div class="social-media">
+            <ul>
+                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+            </ul>
+        </div>
+    </div>
+    <section class="header" id="header">
         <div class="hero">
             <div class="row">
                 <div class="left-section">
                     <div class="content">
-                        <h2> <span>Bình</span> <br>Phan </h2>
+                        <h2> Bình <br>Phan </h2>
                         <p>Currently a third-year software engineering student at RMIT who loves solving problems as well as bringing products to life.</p>
                     </div>
                 </div>
@@ -63,5 +63,20 @@
             </div>
         </div>
     </section>
+    <div class="wrapper">
+        <div class="box">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
 </body>
 </html>
